--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "",
     "private": true,
     "license": "UNLICENSED",
+    "main": "dist/index.js",
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -23,13 +24,13 @@
         "@nestjs/bullmq": "^11.0.2",
         "@nestjs/cache-manager": "^3.0.1",
         "@nestjs/class-validator": "^0.13.4",
-        "@nestjs/common": "^11.0.1",
+        "@nestjs/common": "^11.1.0",
         "@nestjs/config": "^4.0.2",
-        "@nestjs/core": "^11.0.1",
+        "@nestjs/core": "^11.1.0",
         "@nestjs/elasticsearch": "^11.0.0",
         "@nestjs/jwt": "^11.0.0",
         "@nestjs/mapped-types": "^2.1.0",
-        "@nestjs/platform-express": "^11.0.1",
+        "@nestjs/platform-express": "^11.1.0",
         "@nestjs/swagger": "^11.1.0",
         "@nestjs/typeorm": "^11.0.0",
         "@paypal/paypal-server-sdk": "^1.0.0",
@@ -43,13 +44,15 @@
         "crypto": "^1.0.1",
         "es7": "npm:@elastic/elasticsearch@^7.17.14",
         "esmain": "github:elastic/elasticsearch-js",
+        "express": "^5.1.0",
+        "firebase-functions": "^6.3.2",
         "ioredis": "^5.6.1",
         "mapped-types": "^0.0.1",
         "mysql2": "^3.14.0",
         "nodemailer": "^6.10.1",
         "pg": "^8.14.1",
         "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1",
+        "rxjs": "^7.8.2",
         "streamifier": "^0.1.1",
         "swagger-ui-express": "^5.0.1",
         "typeorm": "^0.3.22"
